<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="next_button">Next</string>
    <string name="before_button">Before</string>
    <string name="the_end">Reached the Beginning!</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_china">Beijing is the capital of China</string>
    <string name="question_toronto">Toronto is the capital of Ontario, but not Canada</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river
  in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest
  freshwater lake.</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="return_button">Changed Your Mind?</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong.</string>
    <string name="honest_toast">"Thanks for being honest!"</string>
</resources>